# nav2

./: nav.sh  patchelf.sh  readgbl.md  save_2dmap.sh  save_3dmap.sh
src/autonomous_exploration_development_environment/src/terrain_analysis/launch/: terrain_analysis.launch
src/autonomous_exploration_development_environment/src/terrain_analysis_ext/launch/: pathNorm.launch  terrain_analysis_ext.launch
src/autopatrol_robot/: package.xml  setup.py
src/autopatrol_robot/autopatrol_robot/: patrol_node.py
src/autopatrol_robot/config/: patrol_config.yaml
src/autopatrol_robot/launch/: start_patrol.launch.py
src/driver/serial_node/autopatrol_robot/autopatrol_robot/: patrol_node copy.py  patrol_node.py
src/driver/serial_node/launch/: serial_comm.launch.py
src/driver/serial_node/serial_node/: serial_twist_publisher.py
src/lio/FAST_LIO/config/: mid360.yaml
src/lio/FAST_LIO/rviz/: fastlio.rviz
src/livox_to_pcl/: CMakeLists.txt  package.xml
src/livox_to_pcl/src/: livox_to_pointcloud2.cpp
src/mapper/map_trans_pkg/: CMakeLists.txt  package.xml
src/mapper/map_trans_pkg/launch/: pc2ls.launch.py  pc2ls_elv.launch.py  relocalization.launch.py
src/mapper/map_trans_pkg/map_trans_pkg/: __init__.py  map_publisher_node.py  pcd_publisher_node.py
src/mapper/map_trans_pkg/scripts/: pcd2pgm.py  pcd2pgm_simplify.py  stl2pcd.py
src/mapper/map_trans_pkg/scripts/cad_maps/: RMUL2026.STL
src/mapper/pcd2pgm/config/: pcd.yaml
src/mapper/pointcloud_to_laserscan/launch/: pointcloud_to_laserscan_launch.py
src/navigation/robot_navigation2/config/: nav2_params_1.yaml  nav2_params_2.yaml
src/navigation/robot_navigation2/launch/: navigation2.launch.py  navigation2_1.launch.py
src/navigation/robot_navigation2/map_trans_tool/: pcd2pgm_simplify.py
src/navigation/robot_navigation2/maps/: 3v3map.pgm  3v3map.yaml  map.pgm  map.yaml  map_1.pgm  test.pgm  test.yaml
src/navigation/robot_navigation2/pcds/: map.pcd  test.pcd
src/registration/icp_registration/config/: icp.yaml
